# frontend6

./: Cargo.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
crates/f6-api/: Cargo.toml
crates/f6-api/assets/: ozon.json  redsoft.json
crates/f6-api/src/: fns.rs  lib.rs
crates/f6-key-registry/: Cargo.toml
crates/f6-key-registry/src/: fns.rs  lib.rs
crates/f6-types/: Cargo.toml
crates/f6-types/src/: lib.rs
ui/: Dockerfile  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/ui/: button.tsx  card.tsx  input.tsx
