cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]

[profile.dev]
codegen-backend = "cranelift"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"
perf = "warn"
enum_glob_use = { level = "warn", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[workspace.dependencies]
thiserror = "2.0.18"
derive_more = "2.1.1"
rstest = "0.26.1"
serde = "1.0.228"
color-eyre = "0.6.5"
serde_json = "1.0.149"
tempfile = "3.27.0"
f6-key-registry = { version = "0.1.0", path = "crates/f6-key-registry" }
ureq = "3.2.0"
